--- a/slide/Makefile
+++ b/slide/Makefile
@@ -11,9 +11,9 @@ uninstall:
 	pacman --noconfirm --remove mingw-w64-x86_64-slide
 
 md5sum:
-	@MSYSTEM=MINGW64 bash -c "source PKGBUILD && echo curl -sL $source | md5sum | cut -d' ' -f1"
+	MSYSTEM=MINGW64 source ./PKGBUILD && curl -sL $$source | md5sum | cut -d' ' -f1
 
 clean:
-	rm *.log
+	rm *.log*
 	rm *.tar.gz *.tar.zst
 	rm -rf pkg src
