--- a/slide/Makefile
+++ b/slide/Makefile
@@ -11,7 +11,7 @@ uninstall:
 	pacman --noconfirm --remove mingw-w64-x86_64-slide
 
 md5sum:
-	MSYSTEM=MINGW64 source ./PKGBUILD && curl -sL $$source | md5sum | cut -d' ' -f1
+	MSYSTEM=MINGW64 bash -c 'source ./PKGBUILD && curl -sL $$source | md5sum | awk "{ print $$1 }"'
 
 clean:
 	rm *.log*
