--- a/slide/PKGBUILD
+++ b/slide/PKGBUILD
@@ -7,10 +7,10 @@ fi
 
 _realname=slide
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.5.0
+pkgver=0.6.0
 pkgrel=1
 epoch=
-pkgdesc="AutoCAD slide library and command line utility"
+pkgdesc="AutoCAD slide library and command line utilities"
 arch=('any')
 url="https://github.com/ten0s/${_realname}"
 license=('spdx:GPL-3.0-or-later')
@@ -34,7 +34,7 @@ options=()
 install=
 changelog=
 source=("https://github.com/ten0s/${_realname}/archive/refs/tags/${pkgver}.tar.gz")
-md5sums=("f8c2b36f42e9c65694d25eea5e2b1e35")
+md5sums=("1771f02952f0a116ef993e7ca240a3d3")
 noextract=()
 validpgpkeys=()
 
